--- a/package.json
+++ b/package.json
@@ -2,10 +2,36 @@
   "name": "radial-grid",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "build": "tsup"
   },
-  "author": "",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SantiagoVira/radial-grid.git"
+  },
+  "keywords": [
+    "radial",
+    "grid"
+  ],
+  "author": "Santiago Vira",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SantiagoVira/radial-grid/issues"
+  },
+  "homepage": "https://github.com/SantiagoVira/radial-grid#readme",
+  "devDependencies": {
+    "@types/jest": "^29.5.13",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "tsup": "^8.2.4",
+    "typescript": "^5.6.2"
+  }
 }
