--- a/package.json
+++ b/package.json
@@ -2,36 +2,29 @@
   "name": "radial-grid",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "jest",
-    "build": "tsup"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "rollup": "rollup -c --bundleConfigAsCjs"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SantiagoVira/radial-grid.git"
-  },
-  "keywords": [
-    "radial",
-    "grid"
-  ],
   "author": "Santiago Vira",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/SantiagoVira/radial-grid/issues"
-  },
-  "homepage": "https://github.com/SantiagoVira/radial-grid#readme",
   "devDependencies": {
-    "@types/jest": "^29.5.13",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "tsup": "^8.2.4",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "react": "^18.3.1",
+    "rollup": "^4.21.3",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "tslib": "^2.7.0",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "@types/react": "^18.3.6",
+    "rollup-plugin-postcss": "^4.0.2"
   }
 }
