--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "radial-grid",
-  "version": "1.1.5",
+  "version": "1.1.7",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "homepage": "https://radial-grid.vercel.app/",
+  "repository": {
+    "url": "https://github.com/SantiagoVira/radial-grid-demo"
+  },
   "keywords": [
     "circle",
     "circular",
